# shorelark

./: Cargo.toml  README.md
libs/genetic-algorithm/: Cargo.toml
libs/genetic-algorithm/src/: chromosome.rs  genetic_algorithm.rs  lib.rs  statistics.rs
libs/genetic-algorithm/src/crossover/: mod.rs
libs/genetic-algorithm/src/mutation/: mod.rs
libs/genetic-algorithm/src/selection/: mod.rs
libs/neural-network/: Cargo.toml
libs/neural-network/src/: lib.rs
libs/simulation/: Cargo.toml
libs/simulation-wasm/: Cargo.toml
libs/simulation-wasm/src/: animal.rs  food.rs  lib.rs  simulation.rs  word.rs
libs/simulation/src/: animal.rs  animal_individual.rs  brain.rs  eye.rs  food.rs  lib.rs  simulation.rs  word.rs
template/: index.html  index.js  package.json
